--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 okta.oauth2.issuer=https://dev-92628241.okta.com/oauth2/auseqzocz0hVcvdEO5d7
-resourceServer.url=http://localhost:8082
-
-management.endpoints.web.exposure.include=*
-
-okta.oauth2.clientId=0oaeqzvwseBNYJUkH5d7
-okta.oauth2.clientSecret=4OUxaHXONfSD9aGCT1LhLi--pefoTZEMaLAdp47lLgMj89gFraqmDwqUjQrfYteh
-okta.oauth2.scopes=openid,profile
-server.port=8080
+#resourceServer.url=http://localhost:8082
+okta.oauth2.audience=api://oidcauthserver
+okta.oauth2.groupsClaim=groups
 
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 spring.main.allow-bean-definition-overriding=true
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.group.custom.include=diskSpace,ping
+management.endpoint.health.group.custom.show-components=when_authorized
+management.endpoint.health.group.custom.show-details=when_authorized
+management.endpoint.health.show-details=when_authorized
+
+#endpoints.health.sensitive=false
+#management.security.enabled=false
